# owl_wave

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  Cargo.toml  hooks.yaml  index.html  index.md  owl_wave.js  owl_wave_bg.wasm  setup_web.sh
.github/workflows/: rust.yml
assets/: owl_wave.js  owl_wave_bg.wasm
docs/: index.html  manifest.json  owl_wave.js  owl_wave_bg.wasm  sw.js
src/: app.rs  audio_devices.rs  grid.rs  lib.rs  main.rs  midi_devices.rs  owl_control.rs  wave.rs  wavetable.rs
src/owl_control/: command_processor.rs  crc32.rs  parameter.rs  resources.rs  sysex.rs
