[package]
name = "owl_wave"
version = "0.3.0"
authors = ["Stas Shtin <antisvin@gmail.com>"]
edition = "2021"
rust-version = "1.58"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.16.0" # Gives us egui, epi and web+native backends
serde = { version = "1", features = ["derive"], optional = true }
wavetable = { git = "https://github.com/icsga/Wavetable.git", version = "0.2.0", features = ["use_double_precision"] }
# default_features = false }
#, features = ["use_double_precision"] }
#basic_dsp = "0.9.4"
rustfft = "5.0.0"
rfd = "0.6.3"
owl_midi = "0.2.0"
midir = "0.7.0"
wmidi = "4.0.6"
cpal = "0.13.4"
itertools = "0.10.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = "0.3.55"
js-sys = "0.3"
console_error_panic_hook = "0.1.7"

[features]
default = []
persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown

[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]

# If you want to use the bleeding edge version of `egui`:
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# eframe = { path = "../egui/eframe" }
