[package]
name = "owl_wave"
version = "0.3.10"
authors = ["Stas Shtin <antisvin@gmail.com>"]
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
egui = "0.18.0"
eframe = { version = "0.18.0", features = ["persistence"] }
serde = { version = "1", features = ["derive"] } # You only need this if you want app persistence
wavetable = { git = "https://github.com/icsga/Wavetable.git", version = "0.2.0", features = ["use_double_precision"] }
# default_features = false }
#, features = ["use_double_precision"] }
#basic_dsp = "0.9.4"
rustfft = "5.0.0"
rfd = "0.6.3"
owl_midi = "0.3.3"
midir = "0.7.0"
wmidi = "4.0.6"
itertools = "0.10.3"
anyhow = "1.0.12"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"
cpal = { version = "0.13.5" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = "^0.3.55"
js-sys = "^0.3"
console_error_panic_hook = "0.1.7"
cpal = { version = "0.13.5", features = ["wasm-bindgen"] }
tracing-wasm = "0.2"

[features]
default = []
#persistence = ["eframe/persistence", "serde"] # Enable if you want to persist app state on shutdown
jack = ["cpal/jack"]
#asio = ["cpal/asio"] # Not tested yet, requires downgrading bindgen to 0.54.0

[profile.release]
opt-level = 2 # fast and small wasm
